--- a/Server/package.json
+++ b/Server/package.json
@@ -2,10 +2,11 @@
   "name": "chat-bot-server",
   "version": "1.0.0",
   "description": "server for chat bot app",
-  "main": "index.js",
+  "main": "server.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "build": "npx tsc",
+    "start": "node dist/index.js",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/server.js\""
   },
   "keywords": [
     "chatbot",
@@ -19,7 +20,13 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^6.7.2",
-    "nodemon": "^2.0.20",
     "socket.io": "^4.5.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.11.9",
+    "concurrently": "^7.5.0",
+    "nodemon": "^2.0.20",
+    "typescript": "^4.9.3"
   }
 }
