--- a/Server/package.json
+++ b/Server/package.json
@@ -17,12 +17,14 @@
   "author": "james",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^6.7.2",
     "socket.io": "^4.5.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
     "concurrently": "^7.5.0",
