--- a/Server/package.json
+++ b/Server/package.json
@@ -23,7 +23,9 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
-    "socket.io": "^4.5.3"
+    "socket.io": "^4.5.3",
+    "typescript": "^4.9.3"
+
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -31,6 +33,5 @@
     "@types/node": "^18.11.9",
     "concurrently": "^7.5.0",
     "nodemon": "^2.0.20",
-    "typescript": "^4.9.3"
   }
 }
