--- a/Server/package.json
+++ b/Server/package.json
@@ -32,6 +32,6 @@
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
     "concurrently": "^7.5.0",
-    "nodemon": "^2.0.20",
+    "nodemon": "^2.0.20"
   }
 }
