--- a/Server/package.json
+++ b/Server/package.json
@@ -25,9 +25,9 @@
     "mongoose": "^6.7.2",
     "socket.io": "^4.5.3",
     "typescript": "^4.9.3"
-
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
