--- a/Server/package.json
+++ b/Server/package.json
@@ -24,13 +24,13 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
     "socket.io": "^4.5.3",
-    "typescript": "^4.9.3"
-  },
-  "devDependencies": {
+    "typescript": "^4.9.3",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
+  },
+  "devDependencies": {
     "concurrently": "^7.5.0",
     "nodemon": "^2.0.20"
   }
