[PATHC] - package.json fix

--- a/Server/package.json
+++ b/Server/package.json
@@ -28,7 +28,7 @@
     "@types/jsonwebtoken": "^8.5.9",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.14",
-    "@types/node": "^18.11.9",
+    "@types/node": "^18.11.9"
   },
   "devDependencies": {
     "concurrently": "^7.5.0",
