--- a/Server/package.json
+++ b/Server/package.json
@@ -17,6 +17,10 @@
   "author": "james",
   "license": "ISC",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/node": "^18.11.9",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -24,11 +28,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
     "socket.io": "^4.5.3",
-    "typescript": "^4.9.3",
-    "@types/jsonwebtoken": "^8.5.9",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/express": "^4.17.14",
-    "@types/node": "^18.11.9"
+    "typescript": "^4.9.3"
   },
   "devDependencies": {
     "concurrently": "^7.5.0",
